--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Django==3.0.8
-djangorestframework==3.11.0
+Django>=3.0.8
+djangorestframework>=3.11.0
+psycopg2>=2.8.5
 
-flake8==3.8.3
+
+flake8>=3.8.3
